--- a/MiXi/Main.storyboard
+++ b/MiXi/Main.storyboard
@@ -86,6 +86,7 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="0.5568627451" green="0.47450980390000003" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="P6c-Pl-aX5" firstAttribute="leading" secondItem="ga9-Bn-jK5" secondAttribute="leading" id="4x4-GN-g5T"/>
                             <constraint firstItem="Qdb-qa-XWQ" firstAttribute="baseline" secondItem="NDS-63-5oX" secondAttribute="firstBaseline" id="GKS-JH-9Qs"/>
@@ -417,6 +418,7 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="0.5568627451" green="0.47450980390000003" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="Aag-2g-GQj" firstAttribute="leading" secondItem="PmK-Xo-kng" secondAttribute="leading" id="0l0-Li-CZI"/>
                             <constraint firstItem="tu9-ke-BQN" firstAttribute="top" secondItem="PmK-Xo-kng" secondAttribute="bottom" constant="10" id="EnS-aA-9oP"/>
@@ -561,6 +563,7 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="0.5568627451" green="0.47450980390000003" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="DhP-Cx-9d4" firstAttribute="leading" secondItem="f4D-mm-W5k" secondAttribute="leadingMargin" constant="-6" id="DBU-q5-HHU"/>
                             <constraint firstAttribute="trailingMargin" secondItem="DhP-Cx-9d4" secondAttribute="trailing" constant="-6" id="iqt-K8-ji6"/>
@@ -574,7 +577,6 @@
                         <outlet property="buttonMale" destination="q7J-kL-IuB" id="r76-bd-IYW"/>
                         <outlet property="labelHotRecommand" destination="tlm-r7-w7L" id="zZX-2Z-vb4"/>
                         <outlet property="lableStyle" destination="3jI-a4-xQr" id="TBv-jG-kHf"/>
-                        <outlet property="scrollView" destination="f4D-mm-W5k" id="2qV-XG-A81"/>
                         <outlet property="textBudget" destination="APg-Qf-7LR" id="2A3-Li-0OJ"/>
                         <outlet property="textNikname" destination="sZI-Nu-hO6" id="IgF-vi-a8C"/>
                     </connections>
