--- a/MiXi/DaRenHeader.xib
+++ b/MiXi/DaRenHeader.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <objects>
@@ -52,7 +53,7 @@
                     <color key="backgroundColor" red="0.92156862745098034" green="0.8784313725490196" blue="0.8784313725490196" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e9S-9J-bxA">
-                    <rect key="frame" x="14" y="72" width="82" height="86"/>
+                    <rect key="frame" x="14" y="71" width="82" height="86"/>
                     <state key="normal" backgroundImage="蜜喜蜜喜－切片iphone5_107">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
