--- a/MiXi/TabBarView.xib
+++ b/MiXi/TabBarView.xib
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MyTabBar" customModule="mixi" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Of-wb-tZa">
-                    <rect key="frame" x="0.0" y="15" width="320" height="49"/>
+                    <rect key="frame" x="0.0" y="17" width="320" height="47"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wl5-V4-bZR" customClass="MyTabBarButton" customModule="mixi" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="122" height="49"/>
+                            <rect key="frame" x="0.0" y="0.0" width="122" height="47"/>
                             <color key="backgroundColor" red="1" green="0.3350426125" blue="0.3838580593" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
                             <state key="normal" title="Button">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OEE-Wp-6XG" customClass="MyTabBarButton" customModule="mixi" customModuleProvider="target">
-                            <rect key="frame" x="198" y="0.0" width="122" height="49"/>
+                            <rect key="frame" x="198" y="0.0" width="122" height="47"/>
                             <color key="backgroundColor" red="1" green="0.3350426125" blue="0.3838580593" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
                             <state key="normal" title="Button">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -31,7 +32,7 @@
                     <color key="backgroundColor" red="0.098039215686274508" green="0.10588235294117647" blue="0.10196078431372549" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8QR-WM-lki" customClass="HeartTabBsrButton" customModule="mixi" customModuleProvider="target">
-                    <rect key="frame" x="124" y="0.0" width="72" height="64"/>
+                    <rect key="frame" x="126" y="2" width="67" height="59"/>
                     <state key="normal" backgroundImage="购物车"/>
                 </button>
             </subviews>
